terraform/k8s-manifests/microservice-order1.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
spec:
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 80
