terraform/k8s-manifests/microservice-user1.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: default
spec:
  selector:
    app: user-service
  ports:
  - port: 80
    targetPort: 80
